# jmgr

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: color_info_sorted_2d.ipp  disk.cpp  main_app.cpp  main_app_client.cpp  main_app_gui_sample.cpp  main_daemon.cpp  main_splash.cpp  main_splash_old.cpp  memory.cpp  output
src/metrics/: cpu.cpp  cpu_info.cpp  cpu_info.h  cpu_model.cpp  disk.cpp  disk_usage.cpp  disk_usage.h  diskio.cpp  ipaddr.cpp  kernel.cpp  kernel_info.cpp  kernel_info.h  memory.cpp  memory_info.cpp  memory_info.h  network.cpp  nvidia_gpu.cpp  os.cpp  os_info.cpp  os_info.h  process_info.cpp  process_info.h  uptime.cpp  uptime.h
src/tiv/: image_view.cpp  tiv.h  tiv_lib.cpp  tiv_lib.h
